fix z-index

--- a/src/components/WaterMainInfo/WaterMainInfo.module.css
+++ b/src/components/WaterMainInfo/WaterMainInfo.module.css
@@ -18,7 +18,7 @@
   position: absolute;
   top: 296px;
   left: 290px;
-  z-index: 1000;
+  z-index: 10;
   width: 30px;
   height: 30px;
   fill: var(--color-btn-bg);
